--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,16 +25,25 @@ dependencies:
   share: ^0.6.3+5
   flutter_html: ^0.11.1
   http: any
-  url_launcher: ^5.4.2
+  flutter_webview_plugin: 0.3.10+1
+  transparent_image: ^1.0.0
+  connectivity: ^0.4.6+2
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  flutter_launcher_icons: ^0.7.5
   
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "images/lounch.png"    
 
 
 # For information on the generic Dart part of this file, see the
