--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   share: ^0.6.3+5
   flutter_html: ^0.11.1
   http: any
+  webview_flutter: ^0.3.22+1
   flutter_webview_plugin: 0.3.10+1
   transparent_image: ^1.0.0
   connectivity: ^0.4.6+2
